--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "549972bc",
+   "execution_count": 4,
+   "id": "aa81dd2b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f4f47887",
+   "execution_count": 5,
+   "id": "85963b08",
    "metadata": {},
    "outputs": [
     {
@@ -226,281 +227,40 @@
        "4                  10  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = \"https://raw.githubusercontent.com/umaimehm/Intro_to_AI_2021/main/assignment2-machinelearning/Ruter-data.csv\"\n",
-    "df_original = pd.read_csv(url, sep=';')\n",
+    "df_original = pd.read_csv(url, sep=\";\") \n",
     "df_original.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "52be129e",
+   "execution_count": 11,
+   "id": "c02bcc1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dato</th>\n",
-       "      <th>Linjenavn</th>\n",
-       "      <th>Passasjerer_Ombord</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1159</th>\n",
-       "      <td>10/06/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1160</th>\n",
-       "      <td>07/08/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1161</th>\n",
-       "      <td>23/07/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1162</th>\n",
-       "      <td>11/06/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1164</th>\n",
-       "      <td>16/06/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            Dato Linjenavn  Passasjerer_Ombord\n",
-       "1159  10/06/2020       300                  38\n",
-       "1160  07/08/2020       300                  -1\n",
-       "1161  23/07/2020       300                  12\n",
-       "1162  11/06/2020       300                   9\n",
-       "1164  16/06/2020       300                   7"
+       "300     310\n",
+       "1300    380\n",
+       "2300    130\n",
+       "3000    245\n",
+       "3001    110\n",
+       "Name: Linjenavn, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df = df_original.filter(['Dato','Linjenavn','Passasjerer_Ombord'], axis=1)\n",
-    "df = df[df['Linjenavn'] == '300']\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "31f1e993",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dato</th>\n",
-       "      <th>Linjenavn</th>\n",
-       "      <th>Passasjerer_Ombord</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1159</th>\n",
-       "      <td>10/06/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1160</th>\n",
-       "      <td>07/08/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1161</th>\n",
-       "      <td>23/07/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1162</th>\n",
-       "      <td>11/06/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1164</th>\n",
-       "      <td>16/06/2020</td>\n",
-       "      <td>300</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Dato Linjenavn  Passasjerer_Ombord\n",
-       "1159  10/06/2020       300                  38\n",
-       "1160  07/08/2020       300                   6\n",
-       "1161  23/07/2020       300                  12\n",
-       "1162  11/06/2020       300                   9\n",
-       "1164  16/06/2020       300                   7"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Data cleaning: negative values\n",
-    "median_passasjerer_ombord = df['Passasjerer_Ombord'].median()\n",
-    "for index, row in df.iterrows():\n",
-    "    if row['Passasjerer_Ombord'] < 0:\n",
-    "        df.loc[index,'Passasjerer_Ombord'] =  median_passasjerer_ombord\n",
-    "        \n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "75bec15c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dato</th>\n",
-       "      <th>Linjenavn</th>\n",
-       "      <th>Passasjerer_Ombord</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-10-06</td>\n",
-       "      <td>300</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-07-08</td>\n",
-       "      <td>300</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-07-23</td>\n",
-       "      <td>300</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-11-06</td>\n",
-       "      <td>300</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-06-16</td>\n",
-       "      <td>300</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Dato Linjenavn  Passasjerer_Ombord\n",
-       "0 2020-10-06       300                  38\n",
-       "1 2020-07-08       300                   6\n",
-       "2 2020-07-23       300                  12\n",
-       "3 2020-11-06       300                   9\n",
-       "4 2020-06-16       300                   7"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"Dato\"] = pd.to_datetime(df[\"Dato\"])\n",
-    "df.index = np.arange(0, len(df))\n",
-    "df.head()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
