har skrevet grunnen til vår valg av regresjon

--- a/assignment-2.ipynb
+++ b/assignment-2.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "source": [
     "## Chosen Algorithm\n",
-    "We chose the regression algorithm because it is used to predict continuous data such as the values in the column *Passasjerer_Ombord*."
+    "We chose the regression algorithm because it is used to predict continuous data such as the values in the column *Passasjerer_Ombord*.\n",
+    "The reason of choosing Regression insteadof classification in our case is that, we want to predict a continues value. And, it can't be classified.   "
    ]
   },
   {
